2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.c:
        (g_mount_spec_set_mount_prefix):
	Actually assign the mount_prefix in the GMountSpec

2007-10-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/Makefile.am:
	Change the GIO module dir to $(libdir)/gio/modules as was
	done in GIO.

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonvfs.c:
        * common/gmountspec.[ch]:
	Ensure GDaemonFile mount specs are actually unique.
	When a non-unique mount spec was finalized any unique
	version of the same was removed from the hashtable.

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
        (_g_daemon_vfs_get_uri_for_mountspec):
	Better handling for default types.
	(Handle hostname, port and username)

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
        * common/gvfsuriutils.[ch]:
        * daemon/gvfsbackendtrash.c:
	Update to use the gurifuncs.h from gio.
	Fix filename parsing to handle ~/x

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.[ch]:
	Rename set_icon -> set_icon_name
	Add getter for icon_name and display_name
	
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Update for API changes
	Set display name for in fileinfo

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendtrash.c:
	Update for API changes

	
2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_hash): Faster hash, since mount_spec is unique
        (g_daemon_file_equal): Compare mount spec too
	
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Set volume display names and icons
	Set content type and icon for files

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.[ch]:
        * client/gdaemonvfs.c:
        * daemon/mount.c: